translations and translated catalogs

--- a/custom-waterblast-solutions.html
+++ b/custom-waterblast-solutions.html
@@ -18,8 +18,7 @@ permalink: /custom-solutions
     <p>StoneAge offers a dedicated resource group for handling your difficult waterblast applications. StoneAge Solutions are available for a wide range of support from simple modifications to turn key comprehensive accessory packages. These services are available directly to our dealers, contractors, and end users.
 </p>
     <ul class="margin-bottom-30">
-      <li>Cyclone cleaning</li>
-      <li>Large tunnel cleaning</li>
+      <li>Surface preparation</li>
       <li>Online boiler cleaning</li>
       <li>Portable, external bundle blasting</li>
       <li>Internal and external drill pipe cleaning</li>
@@ -31,7 +30,8 @@ permalink: /custom-solutions
   </div>
 
   <aside class="col-sm-4 col-sm-offset-1 padding-tb-30 cta">
-    <img src="assets/img/thumb/solutions_spread.jpg" class="img-responsive" alt="Custom engineered waterblast solutions">
+    <img src="assets/img/striker_trakvac.jpg" class="img-responsive" alt="Custom engineered waterblast solutions">
+    <p class="grey"><span style="text-transform: uppercase;">Surface Prep/Vacuum Attachment</span><br>Modify the <a href="/tracked-striker">Tracked Striker</a> with a short arm and a vacuum attachment for a custom configuration geared for floor cleaning, coating removal, or scarification. The wireless controller keeps the operator safely out of the blast zone. </p>
   </aside>
 </section>
 
