--- a/manuals.html
+++ b/manuals.html
@@ -790,6 +790,12 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HC.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
+                <td>HCS</td>
+                <td>Hose Containment System model iteration</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HCS.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
                 <td>HI-P6, HI-M9</td>
                 <td>High pressure water swivel</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/HI_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
