--- a/rentals.html
+++ b/rentals.html
@@ -15,7 +15,8 @@ master-slider: yes
 <section class="fluid-container bg-lt-gray margin-top-30">
   <div class="container">
     <div class="col-sm-4 padding-tb-30">
-      <img src="/assets/img/available-now.jpg" alt="Available now" class="img-responsive"/>
+      <h2 style="color: #9e6033; font-size:460%; letter-spacing:2px;">Available</h2>
+      <h2 style="color: #9e6033; font-size:910%; letter-spacing:2px; font-weight: 800; line-height:80%;">Now</h2>
       <h2>in our regional rental fleets</h2>
     </div>
     <div class="col-sm-8" >
