--- a/safety-information.html
+++ b/safety-information.html
@@ -15,7 +15,8 @@ permalink: /safety
   <div class="container">
     <div class="row bottom-border">
       <div class="col-sm-12 padding-tb-30 text-center">
-        <img src="assets/img/safety-warning.jpg" class="img-responsive" alt="Safety warning">
+        <div class="safety-callout">
+        <h2><i class="fa fa-exclamation-triangle"></i> Warning <i class="fa fa-exclamation-triangle"></i></h2></div>
         <h2 class="bold">Operations with waterblast equipment can be potentially hazardous. Caution MUST be exercised prior to and during machine and water jet tool use.</h2>
       </div>
     </div>
@@ -25,8 +26,7 @@ permalink: /safety
           <div class="list-group">
             <a href="#" class="list-group-item header">Recommendations and Guides</a>
             <a href="assets/pdf/safety/sa_safety_guidelines_brochure_2015.pdf" class="list-group-item" target="_blank">Safety Guidelines for StoneAge Equipment</a>
-            <a href="assets/pdf/safety/torque_recommend_brochure_2014.pdf"  class="list-group-item" target="_blank">
-High Pressure Fitting Assembly Guidelines and Torque Recommendations</a>
+            <a href="assets/pdf/safety/torque_recommend_brochure_2014.pdf"  class="list-group-item" target="_blank">High Pressure Fitting Assembly Guidelines and Torque Recommendations</a>
           </div>
         </div>
         <div class="col-sm-6 product-list">
