--- a/sewer-tools-nozzles/warthog-centralizers.html
+++ b/sewer-tools-nozzles/warthog-centralizers.html
@@ -98,7 +98,7 @@ master-slider: yes
                 <tr>
                   <th>Skid Sizes</th>
                   <td>6, 8, 10, 12 in.</td>
-                  <td><span class="metric">152, 203, 254,<br>305 mm</span>
+                  <td><span class="metric">152, 203, 254, 305 mm</span></td>
                 </tr>
                 <tr>
                   <th>Inlet Size</th>
