--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -75,7 +75,7 @@ landing: yes
               <tbody>
                 <tr>
                   <th>Pipe Size</th>
-                  <td>6-18 in. &nbsp;<span class="metric">152-457 cm</span></td>
+                  <td>6-18 in. &nbsp;<span class="metric">152-457 mm</span></td>
                 </tr>
                 <tr>
                   <th>Inlet</th>
@@ -96,7 +96,7 @@ landing: yes
               <tbody>
                 <tr>
                   <th>Pipe Size</th>
-                  <td>6-18 in. &nbsp;<span class="metric">152-457 cm</span></td>
+                  <td>6-18 in. &nbsp;<span class="metric">152-457 mm</span></td>
                 </tr>
                 <tr>
                   <th>Inlet</th>
