--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -169,6 +169,56 @@ permalink: /patents
         <td>WU (Discontinued)</td>
         <td>Rotary nozzle design</td>
       </tr>
+      <tr>
+        <td>9610603</td>
+        <td>SKR</td>
+        <td>HP Waterblasting Nozzle Manipulator</td>
+      </tr>
+      <tr>
+        <td>9919333</td>
+        <td>SKRL, SKR</td>
+        <td>HP Waterblasting Nozzle Manipulator</td>
+      </tr>
+      <tr>
+        <td>9630801</td>
+        <td>ABX-2L</td>
+        <td>Flexible Lance Drive Apparatus</td>
+      </tr>
+      <tr>
+        <td>9662689</td>
+        <td>ABX-2L</td>
+        <td>Flexible Lance Drive Apparatus Tube Guide</td>
+      </tr>
+      <tr>
+        <td>9896299</td>
+        <td>ABX-3L</td>
+        <td>Flexible Lance Drive Apparatus</td>
+      </tr>
+      <tr>
+        <td>9400145</td>
+        <td>ABX-2L</td>
+        <td>Flexible Lance Drive Apparatus Tube Guide</td>
+      </tr>
+      <tr>
+        <td>9845594</td>
+        <td>WHR, WGR</td>
+        <td>Switcher Nozzle</td>
+      </tr>
+      <tr>
+        <td>9395001</td>
+        <td>WHR, WGR</td>
+        <td>Switcher Nozzle</td>
+      </tr>
+      <tr>
+        <td>9022057</td>
+        <td>Switcher</td>
+        <td>Flow Controlled Switching Valve</td>
+      </tr>
+      <tr>
+        <td>8667987</td>
+        <td>Switcher</td>
+        <td>Flow Controlled Switching Valve</td>
+      </tr>
     </tbody>
   </table>
   <p><em>StoneAge patent information can be found on the web at <a href="http://www.sapatents.com">www.sapatents.com</a></em></p>
