--- a/style-history.html
+++ b/style-history.html
@@ -36,8 +36,8 @@ permalink: /brand-history
       <div>
         <ul class="list-unstyled">
           <li><h3>Style Guide</h3></li>
-          <li><a href="#" target="_blank">Overview</a></li>
-          <li><a href="#" target="_blank">Brand History</a></li>
+          <li><a href="/style-overview">Overview</a></li>
+          <li><a href="/brand-history">Brand History</a></li>
           <li><a href="#" target="_blank">Know Your Audience</a></li>
           <li><a href="#" target="_blank">Logos &amp; Branding</a></li>
           <li><a href="#" target="_blank">Typography</a></li>
