--- a/waterblast-automation/autopack-lwp.html
+++ b/waterblast-automation/autopack-lwp.html
@@ -57,7 +57,8 @@ master-slider: yes
       </div>
       
       <p class="product-description">The AutoPack-LWP packages all necessary components for positioning a tractor or shotgun tool for tube bundle or Fin Fan exchanger cleaning.</p>
-      <p>The <a href="/lightweight-positioner">Lightweight Positioner</a> is a utility indexing system that can be paired with a variety of StoneAge automated systems for applications where controlled movement is required. The system is a proven workhorse for controlled, efficient, and safe cleaning of heat exchanger tube IDs. The LWP can also be paired with shotgun tools for tube sheet cleaning and surface preparation. </p>
+      <p>The <a href="/lightweight-positioner">Lightweight Positioner</a> is a utility indexing system that can be paired with a variety of StoneAge automated systems for applications where controlled movement is required. The system is a proven workhorse for controlled, efficient, and safe cleaning of heat exchanger tube IDs. The LWP can also be paired with shotgun tools for tube sheet cleaning and surface preparation.</p>
+      <p>Optionally, the <a href="/masterpack-pro">MasterPack-PRO</a> includes both the AutoPack-LWP and <a href="/autopack-pro">AutoPack-PRO</a> kits.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
@@ -237,6 +238,10 @@ master-slider: yes
       <div class="item">
         <a href="/autopack-pro"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-LWP">
         <h5>AutoPack-PRO</h5></a>
+      </div>
+      <div class="item">
+        <a href="/masterpack-pro"><img class="img-responsive" src="/assets/img/product/thumb-masterpack-pro-01.jpg" alt="MasterPack-PRO">
+        <h5>MasterPack-PRO</h5></a>
       </div>
       <div class="item">
         <a href="/autopack-3l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-3l-01.jpg" alt="AutoPack-3L">
