--- a/waterblast-automation/autopack-pro.html
+++ b/waterblast-automation/autopack-pro.html
@@ -56,12 +56,12 @@ master-slider: yes
         <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">Built around the <a href="/abx-pro">AutoBox ABX-PRO</a>, a versatile hose drive that can be adapted to a wide range of cleaning applications, the AutoPack-PRO is equipped with everything you need to successfully complete jobs spanning pipe, drain, and exchanger cleaning.</p>
+      <p class="product-description">Built around the <a href="/abx-pro">AutoBox ABX-PRO</a>, a versatile hose drive that can be adapted to a wide range of cleaning applications, the AutoPack-PRO is equipped with everything you need to successfully complete jobs spanning pipe, drain, and tube cleaning.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
         <li><a href="/abx-pro">AutoBox ABX-PRO</a> hose tractor for hands-free pipe and tube cleaning</li>
-        <li>Exchanger cleaning components - see also <a href="/autopack-lwp">AutoPack-LWP</a></li>
+        <li>Exchanger cleaning components - see <a href="/autopack-lwp">AutoPack-LWP</a> and <a href="masterpack-pro.html">MasterPack-PRO</a></li>
         <li>Drain cleaning components</li>
         <li>Backout prevention components</li>
         <li>Common service tools</li>
@@ -249,6 +249,10 @@ master-slider: yes
       <div class="item">
         <a href="/autopack-lwp"><img class="img-responsive" src="/assets/img/product/thumb-autopack-lwp-01.jpg" alt="AutoPack-LWP">
         <h5>AutoPack-LWP</h5></a>
+      </div>
+      <div class="item">
+        <a href="/masterpack-pro"><img class="img-responsive" src="/assets/img/product/thumb-masterpack-pro-01.jpg" alt="MasterPack-PRO">
+        <h5>MasterPack-PRO</h5></a>
       </div>
       <div class="item">
         <a href="/autopack-3l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-3l-01.jpg" alt="AutoPack-3L">
