--- a/product-catalogs.html
+++ b/product-catalogs.html
@@ -22,7 +22,7 @@ permalink: /product-catalogs
         <h3>2017/18 Waterblast Tools</h3>
         <p><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR.pdf" target="_blank" title="2017-18 StoneAge Waterblast Tools Catalog">Click here to download the complete Waterblast Tools Catalog</a> » PDF 14 MB</p>
         <p>
-          <a href="/assets/pdf/catalogs/waterblast_2017_de/2017_waterblast_catalog_de.pdf" target="_blank"><img src="/assets/img/icon-Germany-flag.png" alt="German" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/waterblast_2016/2016_waterblast_catalog_FR.pdf" target="_blank"><img src="/assets/img/icon-France-flag.png" alt="French" style="width:32px;" /></a>
+          <a href="/assets/pdf/catalogs/waterblast_2017_sp/2017_waterblast_catalog_spanish.pdf" target="_blank"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_de/2017_waterblast_catalog_de.pdf" target="_blank"><img src="/assets/img/icon-Germany-flag.png" alt="German" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_fr/2017_waterblast_catalog_french.pdf" target="_blank"><img src="/assets/img/icon-France-flag.png" alt="French" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_pt/2017_waterblast_catalog_portuguese.pdf" target="_blank"><img src="/assets/img/icon-Brazil-flag.png" alt="Portuguese" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_nl/2017_waterblast_catalog_dutch.pdf" target="_blank"><img src="/assets/img/icon-Dutch-flag.png" alt="Dutch" style="width:32px;" /></a>
         </p>
       </div>
     </div>
