SpinCat service kits

--- a/downhole-tools/spincat-sc-125.html
+++ b/downhole-tools/spincat-sc-125.html
@@ -81,6 +81,7 @@ master-slider: yes
               <li><a href="#section-bar-2"><span>Applications</span></a></li>
               <li><a href="#section-bar-3"><span>Manuals/Docs</span></a></li>
               <!--<li><a href="#section-bar-3"><span>Videos</span></a></li>-->
+              <li><a href="#section-bar-4"><span>Service Kits</span></a></li>
             </ul>
         </nav>
         <div class="content-wrap">
@@ -231,6 +232,135 @@ master-slider: yes
               </div>
             </div>
           </section>-->
+          
+          <!-- Kits -->
+          <section id="section-bar-4">
+            <div class="col-sm-8">
+              <h3>The following kits are available:</h3>
+              <p><em class="grey">Click to view kit contents</em></p>
+              <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingOne">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        <strong>SC125 600</strong> Lubrication kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BJ 048-S</strong> Viscous Fluid, Slow, 6oz.</li>
+                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
+                            <li>1 x <strong>PL 625 SC-125</strong> Manual Insert</li>
+                            <li>1 x <strong>SC125 026</strong> Port Plug Assembly</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingTwo">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <strong>SC125 602</strong> Seal redress kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BJ 048-S</strong> Viscous Fluid, Slow, 6oz</li>
+                            <li>1 x <strong>BJ 062-S</strong> Anti-seize, 2g</li>
+                            <li>1 x <strong>PL 625 SC-125</strong> Manual Insert</li>
+                            <li>4 x <strong>SC125 006</strong> Shaft Seal</li>
+                            <li>1 x <strong>SC125 008</strong> O-Ring, Viton</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>SC125 016</strong> O-Ring</li>
+                            <li>1 x <strong>SC125 021</strong> Weep Seal</li>
+                            <li>1 x <strong>SC125 026</strong> Port Plug Assembly</li>
+                            <li>1 x <strong>SC168 011-C</strong> Carbide Seat</li>
+                            <li>1 x <strong>SC168 012-O</strong> HP/ High Temp Seal Assembly</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingThree">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <strong>SC125 610</strong> Overhaul kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BJ 048-S</strong> Viscous Fluid, Slow, 6oz</li>
+                            <li>1 x <strong>BJ 062-S</strong> Anti-seize, 2g</li>
+                            <li>1 x <strong>GPT 022-250</strong> Hex Key, 1/4", Standard L</li>
+                            <li>1 x <strong>PL 625 SC-125</strong> Manual Insert</li>
+                            <li>4 x <strong>SC125 006</strong> Shaft Seal</li>
+                            <li>1 x <strong>SC125 007</strong> Thrust Bearing</li>
+                            <li>1 x <strong>SC125 008</strong> O-Ring, Viton</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>SC125 009</strong> Bearing</li>
+                            <li>1 x <strong>SC125 016</strong> O-Ring</li>
+                            <li>1 x <strong>SC125 021</strong> Weep Seal</li>
+                            <li>1 x <strong>SC125 026</strong> Port Plug Assembly</li>
+                            <li>1 x <strong>SC125 050</strong> Tool, Seal Installer</li>
+                            <li>1 x <strong>SC168 011-C</strong> Carbide Seat</li>
+                            <li>1 x <strong>SC168 012-O</strong> HP/ High Temp Seal Assembly</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingFour">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        <strong>SC125 612</strong> Tool kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>SC125 050</strong> Tool, Seal Installer</li>
+                            <li>1 x <strong>GPT 022-250</strong> Hex Key, 1/4", Standard L</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <aside class="col-sm-3 col-sm-offset-1 aside-box">
+              <h3>Need Support?</h3>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+            </aside>
+          </section>
 
         </div><!-- /content -->
     </div><!-- /tabs -->
