--- a/downhole-tools/spincat-sc-212.html
+++ b/downhole-tools/spincat-sc-212.html
@@ -56,6 +56,7 @@ master-slider: yes
               <li><a href="#section-bar-1"><span>Specifications</span></a></li>
               <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
               <li><a href="#section-bar-3"><span>Videos</span></a></li>
+              <li><a href="#section-bar-4"><span>Service Kits</span></a></li>
             </ul>
         </nav>
         <div class="content-wrap">
@@ -176,6 +177,124 @@ master-slider: yes
                 <p class="caption">SpinCat SC-212 Maintenance</p>
               </div>
             </div>
+          </section>
+          
+          <!-- Kits -->
+          <section id="section-bar-4">
+            <div class="col-sm-8">
+              <h3>The following kits are available:</h3>
+              <p><em class="grey">Click to view kit contents</em></p>
+              <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingOne">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        <strong>SC212 600</strong> Lubrication kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BC 410</strong> Syringe Tube Assembly, 20CC</li>
+                            <li>1 x <strong>PL 545 SC-212</strong> Manual Insert</li>
+                            <li>2 x <strong>SC250 026</strong> Port Plug</li>
+                            <li>1 x <strong>SC250 048</strong> High Temp Visc, Not for SC-H, 6oz</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingTwo">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <strong>SC212 602</strong> Seal redress kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>2 x <strong>BJ 062-S</strong> Anti-seize, 2g</li>
+                            <li>2 x <strong>GP 805</strong> Container, Round Hinged Lid Plastic</li>
+                            <li>1 x <strong>PL 545 SC-212</strong> Manual Insert</li>
+                            <li>2 x <strong>SC212 010</strong> Seal, Dual Lip</li>
+                            <li>1 x <strong>SC212 011</strong> Shaft Seal</li>
+                            <li>2 x <strong>SC212 021</strong> O-Ring, Viton</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>2 x <strong>SC250 016</strong> O-Ring, Viton</li>
+                            <li>1 x <strong>SC250 021</strong> Weep Seal, Viton</li>
+                            <li>2 x <strong>SC250 026</strong> Port Plug with O-Ring</li>
+                            <li>1 x <strong>SC250 048</strong> High Temp Visc, Not for SC-H, 6oz</li>
+                            <li>2 x <strong>WGR 054</strong> Face Seal</li>
+                            <li>1 x <strong>WGR 056</strong> Compression Spring</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingThree">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <strong>SC212 610</strong> Overhaul kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BJ 062-S</strong> Anti-seize, 2g</li>
+                            <li>2 x <strong>GP 805</strong> Container, Round Hinged Lid Plastic</li>
+                            <li>1 x <strong>PL 545 SC-212</strong> Manual Insert</li>
+                            <li>2 x <strong>SC212 007</strong> Bearing</li>
+                            <li>1 x <strong>SC212 008</strong> Shim, Donut, SS</li>
+                            <li>2 x <strong>SC212 010</strong> Seal, Dual Lip</li>
+                            <li>1 x <strong>SC212 011</strong> Shaft Seal</li>
+                            <li>1 x <strong>SC168 011-C</strong> Carbide Seat</li>
+                            <li>2 x <strong>SC212 021</strong> O-Ring, Viton</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>SC212 025</strong> Spring</li>
+                            <li>1 x <strong>SC212 030</strong> Bronze Sleeve</li>
+                            <li>2 x <strong>SC250 016</strong> O-Ring, Viton</li>
+                            <li>1 x <strong>SC250 021</strong> Weep Seal, Viton</li>
+                            <li>2 x <strong>SC250 026</strong> Port Plug with O-Ring</li>
+                            <li>1 x <strong>SC250 048</strong> High Temp Visc, Not for SC-H, 6oz</li>
+                            <li>2 x <strong>WGR 054</strong> Face Seal</li>
+                            <li>1 x <strong>WGR 056</strong> Compression Spring</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingFour">
+                    <h4 class="panel-title"><strong>SC212 106</strong> Seal tool</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <aside class="col-sm-3 col-sm-offset-1 aside-box">
+              <h3>Need Support?</h3>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
+            </aside>
           </section>
 
         </div><!-- /content -->
