--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -29,7 +29,7 @@
   <iframe width="854" height="480" src="https://www.youtube.com/embed/rJkYoPp5jmc?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="hcs-vid">
-  <iframe width="854" height="480" src="https://www.youtube.com/embed/jvWa45TniS0?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/sPuawSvBtDA?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="fin-fan-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/geLBK4Tuj_M?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
