--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -661,7 +661,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading6">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse6" aria-expanded="false" aria-controls="collapse6">
-                        <strong>BC 610</strong> Overhaul Kit for BC-K<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BC 610</strong> Overhaul Kit for BC-K/BC-K-P2<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
