dealer and manual updtaes

--- a/index.html
+++ b/index.html
@@ -384,16 +384,13 @@ landing: yes
       <h2>Events</h2>
     </div>
     
-<!--
     <div class="row" style="padding-top:25px;">
-      <a href="https://aogexpo.com.au/" target="_blank"><img src="/assets/img/thumb/upcoming_events_aog_2018.png" class="img-responsive"/ alt="Visit StoneAge/WOMA at AOG"></a>
+      <a href="https://exhibits.spe.org/CTWI2018/Public/Enter.aspx" target="_blank"><img src="/assets/img/thumb/upcoming-events-icota-2018.jpg" class="img-responsive"/ alt="Visit StoneAge at ICoTA 2018"></a>
       <div class="caption text-center">
-        <h4><a href="https://aogexpo.com.au/" target="_blank">AOG Conference &amp; Expo</a><br>
-          <span class="small">Australia's largest oil and gas Exhibition and Conference<br><strong>14-16 March, 2018<br/>
-          Perth, Australia<br></span><a href=" https://aogexpo.com.au/exhibitor-directory/exhibitor/?id=105769" target="_blank" class="small">Booth A14</a></strong></h4>
+        <h4><a href="https://exhibits.spe.org/CTWI2018/Public/Enter.aspx" target="_blank">2018 SPE/ICoTA</a><br>
+          <span class="small">Coiled Tubing &amp; Well Intervention Conference &amp; Exhibition<br><strong>27-28 March, 2018<br></strong></span></h4>
       </div>
     </div>
--->
     
     <div class="row" style="margin-top:15px;">
       <a href="https://www.ifat.de/index-2.html" target="_blank"><img src="/assets/img/thumb/upcoming_events_ifat_2018.jpg" class="img-responsive"/ alt="Visit StoneAge at IFAT 2018"></a>
