--- a/rentals.html
+++ b/rentals.html
@@ -128,7 +128,7 @@ master-slider: yes
 <!-- End Contact Info -->
 
 <section class="fluid-container padding-tb-60 margin-bottom-30 rental-questions">
-  <div class="container related">
+  <div class="container">
     <div class="section-heading" style="margin-bottom:60px">
       <h2>Frequently Asked Questions</h2>
     </div>
@@ -241,7 +241,7 @@ master-slider: yes
             </div>
             <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
               <div class="panel-body">
-                <p>Payment is due upon the completion of the rental period stated in the rental agreement. Long-term rentals will be invoiced after the first month’s rent, and on a 30-day cycle thereafter per the terms of your rental agreement.</p>
+                <p>Payment is due upon the completion of the rental period stated in the rental agreement. Long-term rentals will be invoiced after the first month’s rent, and on a monthly cycle thereafter per the terms of your rental agreement.</p>
               </div>
             </div>
           </div>
